Fix CSS spacing issues in country modal and on buttons

--- a/source/scss/chart-styles.scss
+++ b/source/scss/chart-styles.scss
@@ -37,6 +37,7 @@ $light-purple: lighten($dark-purple, 25%);
     vertical-align: top;
     font-size: 16px;
     label {
+      padding-left: 10px;
       font-weight: 300;
     }
     b {
